# uc-grassland-model

./: .gitignore  CMakeLists.txt  README.md
docs/: TechnicalGuide.docx
parameters/BioDT-generic/: parameters_generic_v1.txt  plant_traits__generic_v1.txt
parameters/GCEF-pilot/: parameters_pilot_v1.txt
scenarios/lat51.390427_lon11.876855/landCover/: lat51.390427_lon11.876855__grasslandCheck__allMaps.txt
scenarios/lat51.390427_lon11.876855/management/: lat51.390427_lon11.876855__2013-01-01_2023-12-31__management__GER_Lange__data_query_protocol.txt  lat51.390427_lon11.876855__2013-01-01_2023-12-31__management__GER_Schwieder.txt  lat51.390427_lon11.876855__2013-01-01_2023-12-31__management__GER_Schwieder__data_query_protocol.txt
scenarios/lat51.390427_lon11.876855/soil/: lat51.390427_lon11.876855__2020__soil__data_query_protocol.txt
scenarios/lat51.391900_lon11.878700/landCover/: lat51.391900_lon11.878700__grasslandCheck__allMaps.txt
scenarios/lat51.391900_lon11.878700/management/: lat51.391900_lon11.878700__2013-01-01_2023-12-31__management__GER_Lange__data_query_protocol.txt  lat51.391900_lon11.878700__2013-01-01_2023-12-31__management__GER_Schwieder.txt  lat51.391900_lon11.878700__2013-01-01_2023-12-31__management__GER_Schwieder__data_query_protocol.txt
scenarios/lat51.391900_lon11.878700/soil/: lat51.391900_lon11.878700__2020__soil.txt  (+1 more)
scenarios/management/: lat51.340199_lon12.360103__2013-01-01_2022-12-31__management.txt.txt  management_51.340199_12.360103_2013_2022.txt
scenarios/soil/: lat51.340199_lon12.360103__2020__soil.txt.txt  soil_51.340199_12.360103_refYear2020.txt
simulations/: modifyConfig.py  runReplicatedSimulations.py
simulations/project1/: configuration_51.340199_12.360103_2013_2022_generic_v1.txt  lat51.340199_lon12.360103__2013-01-01_2022-12-31__configuration__generic_v1.txt  lat51.340199_lon12.360103__2013-01-01_2022-12-31__outputWritingDates.txt  lat51.391900_lon11.878700__2013-01-01_2022-12-31__configuration__generic_v1.txt  lat51.391900_lon11.878700__2013-01-01_2022-12-31__outputWritingDates.txt  lat51.391900_lon11.878700__2013-01-01_2023-12-31__configuration__generic_v1.txt  outputWritingDates_51.340199_12.360103_2013_2022.txt  runSimulation.cmd  sterr.txt  stout.txt
simulations/project_template/: latLAT_lonLON__startYear-01-01_endYear-12-31__configuration__generic_v1.txt  runSimulation.cmd
src/: main.cpp
src/module_growth/: growth.cpp  growth.h
src/module_init/: constants.h  init.cpp  init.h
src/module_input/: input.cpp  input.h
src/module_interaction/: interaction.cpp  interaction.h
src/module_management/: management.cpp  management.h
src/module_mortality/: mortality.cpp  mortality.h
src/module_output/: output.cpp  output.h
src/module_parameter/: parameter.cpp  parameter.h
src/module_plant/: allometry.cpp  allometry.h  community.cpp  community.h  plant.cpp  plant.h
src/module_recruitment/: recruitment.cpp  recruitment.h
src/module_soil/: soil.cpp  soil.h
src/module_step/: state.cpp  state.h  step.cpp  step.h
src/module_weather/: weather.cpp  weather.h
src/utils/: utils.cpp  utils.h
(+44 files in other folders)
